# Nano_Quadcopter_v4

./: README.md
Production/: BOM_Nano Quadcopter v4.csv  PCB_PCB.json  PickAndPlace_PCB.csv
Schematic/: SCH_Nano Quadcopter v4.json
t3-drone/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.old
t3-drone/components/config/: CMakeLists.txt
t3-drone/components/config/include/: config.h
t3-drone/components/core/: CMakeLists.txt
t3-drone/components/core/hal/interface/: imu_types.h  ledseq.h  sensor_mpu6050.h  usec_time.h
t3-drone/components/core/hal/src/: ledseq.c  sensor_mpu6050.c  usec_time.c
t3-drone/components/core/modules/interface/: attitude_controller.h  commander.h  controller_pid.h  estimator_complementary.h  estimator_utils.h  kalman_core_v2.h  math3d.h  pid.h  position_controller.h  position_estimator.h  power_distribution.h  sensfusion6.h  stabilizer.h  stabilizer_types.h  static_mem.h  system.h
t3-drone/components/core/modules/src/: attitude_pid_controller.c  commander.c  controller_pid.c  estimator_complementary.c  estimator_utils.c  kalman_core_v2.c  pid.c  position_controller_pid.c  position_estimator_altitude.c  power_distribution_stock.c  sensfusion6.c  stabilizer.c  system.c
t3-drone/components/drivers/i2c_bus/: CMakeLists.txt  i2c_drv.c  i2cdev_esp32.c
t3-drone/components/drivers/spi_bus/: CMakeLists.txt  spi_drv.c
t3-drone/components/lib/dsp_lib/: CMakeLists.txt  (+1 more)
t3-drone/components/utils/: CMakeLists.txt  filter.c  num.c  sleepus.c
t3-drone/main/: CMakeLists.txt  Kconfig.projbuild  main.c
(+34 files in other folders)
