idf_component_register(SRCS "./hal/src/ledseq.c"
							"./hal/src/sensor_mpu6050.c"
							"./hal/src/usec_time.c"
							"./modules/src/attitude_pid_controller.c"
							"./modules/src/estimator_utils.c"
							"./modules/src/controller_pid.c"
							"./modules/src/commander.c"
							"./modules/src/kalman_core_v2.c"
							"./modules/src/estimator_complementary.c"
							"./modules/src/pid.c"
                			"./modules/src/position_estimator_altitude.c"
                			"./modules/src/position_controller_pid.c"
                			"./modules/src/power_distribution_stock.c"
							"./modules/src/sensfusion6.c"
							"./modules/src/stabilizer.c"
							"./modules/src/system.c"
                INCLUDE_DIRS "./hal/interface" "./modules/interface" "." 
                REQUIRES utils config led espnow i2c_bus mpu6050 spl06 pmw3901 mcc5983ma motors)